*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,9 @@
+lblLoanReturned = Returned
+lblLoanType = Loan Type
+lblOnlyCurrentLoans =  Include only current loans
+lblOnlyHistoricalLoans = Include only historical loans
+lblAllLoans = Include all (current & history)
+lblBetween = Between
 lblLoanOverdue = Overdue
 lblLoanLent = Lent
 lblMassUpdateAlwaysUseFirst = Always use first result (quick but less precise)
