--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,9 @@
+lblLoanReturned = Geretourneerd
+lblLoanType = Uitleen type
+lblOnlyCurrentLoans=Nu uitgeleend
+lblOnlyHistoricalLoans=In het verleden uitgeleend
+lblAllLoans = Alles (huidig en historisch)
+lblBetween=Tussen
 sysDeveloperFieldUserInteger2=Gebruikersveld - Numeriek 2
 msgNotSaved=Niet alle veranderingen zijn opgeslagen. Wilt u deze nu opslaan?
 sysMovieFieldColor=Color
