*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -3,7 +3,7 @@ lblLoanType = Loan Type
 lblOnlyCurrentLoans =  Include only current loans
 lblOnlyHistoricalLoans = Include only historical loans
 lblAllLoans = Include all (current & history)
-lblBetween = Between
+lblBetween = between
 lblLoanOverdue = Overdue
 lblLoanLent = Lent
 lblMassUpdateAlwaysUseFirst = Always use first result (quick but less precise)
