--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -2121,7 +2121,7 @@ sysAuthorFieldID=ID
 lblLeft=Links
 lblUnselectAll=Deselecteer alle
 sysMovieFieldVideoBitRate=Video Bitratio
-lblBetween=Tussen
+lblBetween=tussen
 sysAudiocdFieldartists_persist=Artist Persistence
 lblBlur=Wazig maken
 msgMatchFound=Er was een resultaat gevonden voor '%1'. Item '%2' is bijgewerkt.
