--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,4 @@
+lblOnlyOverdueLoans = Late returns only
 lblLoanReturned = Returned
 lblLoanType = Loan Type
 lblOnlyCurrentLoans =  Include only current loans
