*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -2180,6 +2180,7 @@ lblDateField=Date Field
 lblEndsWith=Eindigt op
 sysMusictrackFieldCreated=Aangemaakt op
 lblLoanInformation=Uitleen Informatie
+lblLoanAdministration=Uitleen Administratie
 sysSuperFieldLoanStatus=Status
 sysUserFieldAddress=Adres
 sysAspectratioItemPlural=Aspect ratios
