--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -126,7 +126,8 @@ lblPersonOrderByFirstname = Order by first name
 lblRetrieveAudioCDInfo = Retrieve CD Information
 lblAddMultiple = Create Multiple
 lblAdministration = Administration
-lblLoanInformation = Loan Information
+lblLoanInformation = Loan Administration
+lblLoanAdministration = Loan Administration
 lblRelatedItems = Related Items
 lblLendItems = Lend Items
 lblDueDate = Due Date
