*** empty log message ***

--- a/homepage/version.properties
+++ b/homepage/version.properties
@@ -1,6 +1,6 @@
-#Fri Mar 09 21:52:42 CET 2012
+#Sat Jun 09 18:15:23 CEST 2012
+version=3.9.13
 download_url=http\://www.datacrow.net/download.html
-version=3.9.12
 type=p
-information_url=http\://www.datacrow.net/news.html
 comment=production release
+information_url=http\://www.datacrow.net/news.html
