*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -288,7 +288,7 @@ msgLoginnameIsNotAllowedToChange=De gebruikersnaam kan niet worden gewijzigd
 sysSoftware_categoryItem=Categorie
 sysContainer_containertypeFieldName=Naam
 sysPersonFieldUserInteger2=Gebruikersveld - Numeriek 2
-sysSuperFieldLoanStatusDays=# Dagen
+sysSuperFieldLoanStatusDays=Dagen
 sysPersonFieldUserInteger1=Gebruikersveld - Numeriek 1
 sysAudiocd_stateFieldCreated=Aangemaakt op
 sysMediaFieldYear=Jaar
