--- a/.classpath
+++ b/.classpath
@@ -62,6 +62,10 @@
 	<classpathentry kind="lib" path="lib/xml-rpc/xmlrpc-server-3.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/jaudiotagger-2.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/tika-app-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/pdf/pdfbox-1.7.1.jar"/>
+	<classpathentry kind="lib" path="lib/pdf/bcmail-jdk14-132.jar"/>
+	<classpathentry kind="lib" path="lib/pdf/bcprov-jdk14-132.jar"/>
+	<classpathentry kind="lib" path="lib/pdf/FontBox-0.1.0-dev.jar"/>
+	<classpathentry kind="lib" path="lib/pdf/ISBNExtractor-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/pdf/PDFBox-0.7.3.jar"/>
 	<classpathentry kind="output" path="_build"/>
 </classpath>
