*** empty log message ***

--- a/homepage/version.properties
+++ b/homepage/version.properties
@@ -1,6 +1,6 @@
-#Sat Jun 16 11:07:27 CEST 2012
+#Sun Jan 06 21:51:47 CET 2013
+version=3.9.15
 download_url=http\://www.datacrow.net/download.html
-version=3.9.14
 type=p
-information_url=http\://www.datacrow.net/news.html
 comment=production release
+information_url=http\://www.datacrow.net/news.html
