*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgRestoreFileOverwriteIssue = File %1 currently exists. The delete of the existing file failed.
 msgRetrievingItems = Retrieving items...
 msgReadingFilesHasFinished = Finished reading files
 msgEnterValueForFind = Please enter a value to find and replace
