--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+msgRestoreFileOverwriteIssue=Bestand %1 bestaat reeds. Het verwijderen van het bestaande bestand is mislukt.
 lblOnlyOverdueLoans=Alleen overschrijdingen
 msgNotSaved=Niet alle veranderingen zijn opgeslagen. Wilt u deze nu opslaan?
 sysDeveloperFieldUserInteger2=Gebruikersveld - Numeriek 2
