*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1864,7 +1864,7 @@ sysBook_storagemediumFieldItem=Item
 msgVersionCheckOnStartup=Controleer of er een nieuwe versie is tijdens het opstarten.
 sysMovie_externalreferenceFieldexternalidtype=Type
 sysBook_stateFieldLabel=Label
-lblBckFileFilter=Data Crow backup file (bck)
+lblBckFileFilter=Data Crow backup file
 sysActorFieldwebpage=Webpagina
 sysAudiocd_stateFieldName=Naam
 lblQueryIn=Query input
