--- a/resources/German_resources.properties
+++ b/resources/German_resources.properties
@@ -1848,7 +1848,7 @@ sysAudiocdFieldexternalreferences=External References
 sysBook_storagemediumFieldItem=Eintrag
 msgVersionCheckOnStartup=Check for new versions on startup.
 sysMovie_externalreferenceFieldexternalidtype=Typ
-lblBckFileFilter=Data Crow Sicherungsdatei (bck)
+lblBckFileFilter=Data Crow Sicherungsdatei
 sysBook_stateFieldLabel=Label
 sysActorFieldwebpage=Webseite
 sysMusicartistFieldwebpage=Webseite
