--- a/.classpath
+++ b/.classpath
@@ -75,5 +75,6 @@
 	<classpathentry kind="lib" path="lib/commons-codec-1.6.jar"/>
 	<classpathentry kind="lib" path="lib/xml/commons-io-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/xml/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/zip/truezip_7_7_1.jar"/>
 	<classpathentry kind="output" path="_build"/>
 </classpath>
