--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -512,7 +512,7 @@ lblIcon = Icon
 lblYes = Yes
 lblNo = No
 lblPicFileFilter = Images (JPeg/Gif/Bmp/Png/SVG)
-lblBckFileFilter = Data Crow backup file (bck)
+lblBckFileFilter = Data Crow backup file
 lblRemoveTrack = Remove Track
 lblAddChild = Add %1
 lblUpdateAll = Update all
