*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -86,6 +86,8 @@ msgCouldNotDetermineVersion = Could not determine version. Please be aware of th
 msgOldVersion3.4.12 = This backup was made for an older version of Data Crow. You can only restore this on a version 3.4.13 Data Crow installation. Continue anyway?
 msgOldVersion3.8.16 = This backup was made for an older version of Data Crow. You can only restore this on a version 3.8.16 Data Crow installation. Continue anyway?
 msgRestoreFinishedRestarting = The restore was successful. Data Crow will now exit.
+msgBackupFinished = The backup was successfully created.
+msgBackupFinishedUnsuccessful = The backup was not completed successfully. Check the log for messages. 
 msgWebServerStarted = Web Server is running
 msgWebServerStopped = Web Server is down
 msgWebServerStartError = The web server failed to start: %1
