--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,5 @@
+msgBackupFinished = De backup is met succes aangemaakt.
+msgBackupFinishedUnsuccessful = De backup is mislukt. 
 msgRestoreFileOverwriteIssue=Bestand %1 bestaat reeds. Het verwijderen van het bestaande bestand is mislukt.
 lblOnlyOverdueLoans=Alleen overschrijdingen
 msgNotSaved=Niet alle veranderingen zijn opgeslagen. Wilt u deze nu opslaan?
