*** empty log message ***

--- a/homepage/version.properties
+++ b/homepage/version.properties
@@ -1,6 +1,6 @@
 #Fri Jan 18 22:19:09 CET 2013
-download_url=http\://www.datacrow.net/download.html
+download_url=http://datacrow.net/#downloads
 version=3.9.19
 type=p
-information_url=http\://www.datacrow.net/news.html
+information_url=http://datacrow.net/#news
 comment=production release
