--- a/homepage/version.properties
+++ b/homepage/version.properties
@@ -1,6 +1,6 @@
-#Fri Jan 18 22:19:09 CET 2013
-download_url=http://datacrow.net/#downloads
-version=3.9.19
+#Sat Feb 02 20:53:36 CET 2013
+version=3.9.20
+download_url=http\://datacrow.net/\#downloads
 type=p
-information_url=http://datacrow.net/#news
 comment=production release
+information_url=http\://datacrow.net/\#news
