*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -237,7 +237,7 @@ msgRestoreError = An error occurred while trying to restore the backup: %1
 msgRestoreFileError = While restoring %1 the following error occurred: %2
 msgRestoreFinished = Restore is finished
 msgSelectBackupFile = Select a backup file first
-msgBackupFileCreationError = Could not create the backup file : %1
+msgBackupFileCreationError = An error has occurred while processing the backup: %1
 msgWritingBackupFile = Writing the backup file
 msgNoFilename = This item does not have a filename defined!
 msgProgramAlreadyDefined = For this extension a program has already been defined
