--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1216,7 +1216,7 @@ sysAuthor_externalreferenceItemPlural=Externe Referenties
 0x0038=NMS VBXADPCM
 sysLanguageFieldIcon=Icoon
 0x0035=Digireal
-msgBackupFileCreationError=Backup bestand kan niet worden aangemaakt: %1
+msgBackupFileCreationError=Er heeft een fout plaatsgevonden tijdesn het verwerken van de backup: %1
 sysAudiocdFieldUserShortText1=Gebruikersveld - Text kort 1
 0x0036=DigiADPCM
 lblRunOnStartup=Uitvoeren tijdens het opstarten van Data Crow
