*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -441,7 +441,7 @@ lblProgram = Program
 lblAdd = Add
 lblStartProgram = Launch File
 lblDeleteImageFile = Delete picture file after adding it to an item
-lblRatingOutOf = out of 10
+lblRatingOutOf = / 10
 lblRatingNotRated = not yet rated
 lblToggleQuickView = Toggle Quick View
 lblMove = Move
