--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -955,7 +955,7 @@ sysMusictrackFieldItem=Item
 tpEditItem=Open het item in het item formulier. In dit formulier kunnen de gegevens van het item worden aangepast.
 msgFieldNameNotAllowed=De opgegeven veldnaam is niet toegestaan (gereserveerd sleutelwoord).
 sysCountryFieldCreated=Aangemaakt op
-lblRatingOutOf=out of 10
+lblRatingOutOf=/ 10
 0x0078=Voxware VR18
 0x0077=Voxware VR12
 msgFailedToOpen=De dialoog kon niet worden getoond: %1
