*** empty log message ***

--- a/resources/Italian_resources.properties
+++ b/resources/Italian_resources.properties
@@ -1961,7 +1961,7 @@ sysAuthor_externalreferenceFieldLabel=Etichetta
 sysDirectorFieldItem=Elemento
 sysAudiotrackFieldCreated=Creato il
 lblCDName=Nome CD
-lblYearsAgo=Years ago
+lblYearsAgo=Anni fa
 sysSoftware_externalreferenceFieldName=Nome
 sysBook_externalreferenceFieldModified=Modificato il
 lblFileHashing=File Hashing
