*** empty log message ***

--- a/homepage/version.properties
+++ b/homepage/version.properties
@@ -1,6 +1,6 @@
-#Sun Feb 10 19:37:02 CET 2013
-version=3.9.21
+#Mon Apr 29 23:06:05 CEST 2013
 download_url=http\://datacrow.net/\#downloads
+version=3.9.22
 type=p
-comment=production release
 information_url=http\://datacrow.net/\#news
+comment=production release
