*** empty log message ***

--- a/modules/audiotrack.properties
+++ b/modules/audiotrack.properties
@@ -1,21 +1,25 @@
 #
-#Sun Sep 13 12:42:05 CEST 2009
+#Tue Apr 30 18:35:08 CEST 2013
 online_search_field_settings_dialog_size=600/450
+file_import_online_service_region=
 online_search_default_server=
 import_local_art_back_keywords=back
+file_import_recursive=false
 enabled=true
 import_local_art_media_keywords=cd,dvd,media
 card_view_picture_order=
 online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
+import_cd_storagemedium=
+export_fields=
 online_search_default_mode=
-field_definitions={155/&/null/&/false/&/false/&/false/&/false/&/Information}{153/&/null/&/false/&/false/&/false/&/false/&/Information}{214/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/true/&/false/&/false/&/false/&/Information}{1/&/null/&/true/&/true/&/false/&/false/&/Information}{150/&/null/&/true/&/false/&/false/&/false/&/Information}{3/&/null/&/true/&/false/&/false/&/false/&/Information}{151/&/null/&/true/&/false/&/false/&/false/&/Information}{154/&/null/&/true/&/false/&/false/&/false/&/Information}{2/&/null/&/true/&/false/&/false/&/false/&/Information}{205/&/null/&/true/&/false/&/false/&/false/&/null}{6/&/null/&/true/&/false/&/false/&/false/&/Information}{206/&/null/&/true/&/false/&/false/&/false/&/null}{152/&/null/&/true/&/false/&/false/&/false/&/Information}{5/&/null/&/true/&/false/&/false/&/false/&/Information}{4/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}
+field_definitions={100000006/&/null/&/false/&/false/&/false/&/false/&/null}{100000155/&/null/&/false/&/false/&/false/&/false/&/null}{100000005/&/null/&/false/&/false/&/false/&/false/&/null}{100000153/&/null/&/false/&/false/&/false/&/false/&/null}{155/&/null/&/false/&/false/&/false/&/false/&/Information}{153/&/null/&/false/&/false/&/false/&/false/&/Information}{214/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/true/&/false/&/false/&/false/&/Information}{1/&/null/&/true/&/true/&/false/&/false/&/Information}{150/&/null/&/true/&/false/&/false/&/false/&/Information}{3/&/null/&/true/&/false/&/false/&/false/&/Information}{151/&/null/&/true/&/false/&/false/&/false/&/Information}{154/&/null/&/true/&/false/&/false/&/false/&/Information}{2/&/null/&/true/&/false/&/false/&/false/&/Information}{205/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{6/&/null/&/true/&/false/&/false/&/false/&/Information}{206/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{152/&/null/&/true/&/false/&/false/&/false/&/Information}{5/&/null/&/true/&/false/&/false/&/false/&/Information}{4/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}
 group_by=
 card_view_item_description=
 table_column_order=1\#150\#3\#
 online_search_default_region=
-auto_create_subitems=true
+import_save_directly=false
 mass_update_use_original_service_settings=false
 loan_form_size=500/500
 web_field_settings_dialog_size=500/300
@@ -24,24 +28,34 @@ title_cleanup_regex=
 item_form_size=539/662
 title_cleanup=axxo,dvdrip,cdrip,dvd-rip,cd-rip
 online_search_field_overwrite_settings=
+file_import_online_service_mode=
 online_search_overwrite=false
 file_import_dialog_size=550/800
 field_settings_dialog_size=500/300
 quick_view_settings_dialog_size=500/300
+file_import_use_online_service=true
 auto_add_perfect_match=false
-quick_view_field_definitions={155/&/false/&/Horizontal/&/0}{153/&/false/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{151/&/false/&/Horizontal/&/0}{154/&/false/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{150/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{2/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{6/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{152/&/false/&/Horizontal/&/0}{5/&/false/&/Horizontal/&/0}{4/&/false/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{104/&/false/&/Horizontal/&/0}{101/&/false/&/Horizontal/&/0}{102/&/false/&/Horizontal/&/0}{105/&/false/&/Horizontal/&/0}{103/&/false/&/Horizontal/&/0}
+quick_view_field_definitions={100000006/&/false/&/Horizontal/&/0}{100000155/&/false/&/Horizontal/&/0}{100000005/&/false/&/Horizontal/&/0}{100000153/&/false/&/Horizontal/&/0}{155/&/false/&/Horizontal/&/0}{153/&/false/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{151/&/false/&/Horizontal/&/0}{154/&/false/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{150/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{2/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{6/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{152/&/false/&/Horizontal/&/0}{5/&/false/&/Horizontal/&/0}{4/&/false/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{104/&/false/&/Horizontal/&/0}{101/&/false/&/Horizontal/&/0}{102/&/false/&/Horizontal/&/0}{105/&/false/&/Horizontal/&/0}{103/&/false/&/Horizontal/&/0}
+import_cd_container=
 card_view_settings_dialog_size=500/400
+file_import_directory_usage=0
 Simple_Item_Form_Size=450/550
 online_search_retrieved_fields=4\#151\#104\#154\#150\#3\#103\#2\#105\#205\#6\#201\#102\#1\#206\#152\#153\#5\#0\#101\#
 online_search_form_size=700/600
 import_local_art_recurses=true
+mass_update_always_use_first=false
 import_local_art=true
 import_cd_dialog_size=550/400
-web_field_definitions={155/&/100/&/0/&/false/&/false/&/false}{153/&/100/&/0/&/false/&/false/&/false}{4/&/100/&/0/&/false/&/false/&/false}{6/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/true/&/false/&/false}{151/&/100/&/0/&/true/&/false/&/false}{5/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{2/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{3/&/100/&/0/&/true/&/false/&/false}{154/&/100/&/0/&/true/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}{1/&/100/&/0/&/true/&/false/&/false}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}{152/&/100/&/0/&/true/&/false/&/false}
+mass_update_server=
+web_field_definitions={100000006/&/100/&/0/&/false/&/false/&/false}{100000155/&/100/&/0/&/false/&/false/&/false}{100000005/&/100/&/0/&/false/&/false/&/false}{100000153/&/100/&/0/&/false/&/false/&/false}{155/&/100/&/0/&/false/&/false/&/false}{153/&/100/&/0/&/false/&/false/&/false}{4/&/100/&/0/&/false/&/false/&/false}{6/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/true/&/false/&/false}{151/&/100/&/0/&/true/&/false/&/false}{5/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{2/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{3/&/100/&/0/&/true/&/false/&/false}{154/&/100/&/0/&/true/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}{1/&/100/&/0/&/true/&/false/&/false}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}{152/&/100/&/0/&/true/&/false/&/false}
+show_pictures_in_separate_tabs=true
 filter_dialog_size=700/400
+file_import_online_service=
 default_view=1
 quick_filter_default_field=0
 simple_item_view_size=450/550
-table_settings=[59]{4,75}{151,75}{214,75}{104,75}{154,75}{150,75}{3,75}{103,75}{155,75}{105,75}{205,75}{2,75}{102,75}{6,75}{201,75}{1,75}{206,75}{152,75}{153,75}{5,75}{101,75}{0,75}
+mass_update_mode=
+table_settings=[59]{0,75}{205,75}{102,75}{1,75}{103,75}{2,75}{101,75}{206,75}{3,75}{201,75}{4,75}{5,75}{6,75}{104,75}{105,75}{152,75}{153,75}{154,75}{155,75}{214,75}{150,75}{151,75}
 online_search_ub_items=false
 synchronizer_dialog_size=550/400
+mass_update_region=
