--- a/modules/contactperson.properties
+++ b/modules/contactperson.properties
@@ -1,9 +1,10 @@
 #
-#Mon Nov 15 15:41:33 CET 2010
+#Tue Apr 30 18:35:08 CEST 2013
 online_search_field_settings_dialog_size=600/450
 file_import_online_service_region=
 online_search_default_server=
 import_local_art_back_keywords=back
+file_import_recursive=false
 enabled=true
 import_local_art_media_keywords=cd,dvd,media
 card_view_picture_order=3\#
@@ -11,6 +12,7 @@ online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 import_cd_storagemedium=
+export_fields=
 online_search_default_mode=
 field_definitions={0/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{1/&/null/&/true/&/true/&/false/&/false/&/lblInformation}{4/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{2/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{214/&/null/&/false/&/false/&/false/&/false/&/null}{9/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{10/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{3/&/null/&/true/&/false/&/false/&/false/&/null}{8/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{6/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{7/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{5/&/null/&/true/&/true/&/false/&/false/&/lblInformation}{205/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{206/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{201/&/null/&/true/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}
 group_by=
@@ -41,6 +43,7 @@ Simple_Item_Form_Size=450/550
 online_search_retrieved_fields=2\#205\#4\#8\#6\#201\#1\#206\#3\#7\#5\#0\#
 online_search_form_size=700/600
 import_local_art_recurses=true
+mass_update_always_use_first=false
 import_local_art=true
 import_cd_dialog_size=550/400
 mass_update_server=
