--- a/modules/user.properties
+++ b/modules/user.properties
@@ -1,5 +1,5 @@
 #
-#Tue Nov 27 21:05:51 CET 2012
+#Tue Apr 30 18:35:08 CEST 2013
 online_search_field_settings_dialog_size=600/450
 file_import_online_service_region=
 online_search_default_server=
@@ -35,7 +35,7 @@ field_settings_dialog_size=891/575
 quick_view_settings_dialog_size=549/481
 file_import_use_online_service=true
 auto_add_perfect_match=false
-quick_view_field_definitions={3/&/true/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{2/&/false/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{5/&/false/&/Horizontal/&/0}
+quick_view_field_definitions={7/&/true/&/Horizontal/&/0}{13/&/true/&/Horizontal/&/0}{11/&/true/&/Horizontal/&/0}{12/&/true/&/Horizontal/&/0}{0/&/true/&/Horizontal/&/0}{217/&/true/&/Horizontal/&/0}{8/&/true/&/Horizontal/&/0}{9/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{2/&/false/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{5/&/false/&/Horizontal/&/0}
 import_cd_container=
 card_view_settings_dialog_size=500/400
 file_import_directory_usage=0
