--- a/modules/bookpublisher.properties
+++ b/modules/bookpublisher.properties
@@ -1,9 +1,10 @@
 #
-#Mon Nov 15 15:41:33 CET 2010
+#Tue Apr 30 18:35:08 CEST 2013
 online_search_field_settings_dialog_size=600/450
 file_import_online_service_region=
 online_search_default_server=
 import_local_art_back_keywords=back
+file_import_recursive=false
 enabled=true
 import_local_art_media_keywords=cd,dvd,media
 card_view_picture_order=4\#
@@ -11,8 +12,9 @@ online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 import_cd_storagemedium=
+export_fields=
 online_search_default_mode=
-field_definitions={218/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{5/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{214/&/null/&/true/&/false/&/false/&/false/&/null}{6/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{0/&/null/&/false/&/false/&/false/&/false/&/null}{1/&/null/&/true/&/true/&/true/&/false/&/lblInformation}{2/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{3/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{205/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{206/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{201/&/null/&/true/&/false/&/false/&/false/&/null}{4/&/null/&/true/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}
+field_definitions={100000218/&/null/&/false/&/false/&/false/&/false/&/null}{218/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{5/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{214/&/null/&/true/&/false/&/false/&/false/&/null}{6/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{0/&/null/&/false/&/false/&/false/&/false/&/null}{1/&/null/&/true/&/true/&/true/&/false/&/lblInformation}{2/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{3/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{205/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{206/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{201/&/null/&/true/&/false/&/false/&/false/&/null}{4/&/null/&/true/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}
 group_by=1\#
 card_view_item_description=
 table_column_order=6\#5\#
@@ -33,7 +35,7 @@ field_settings_dialog_size=500/300
 quick_view_settings_dialog_size=576/435
 file_import_use_online_service=true
 auto_add_perfect_match=false
-quick_view_field_definitions={218/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{101/&/false/&/Horizontal/&/0}{104/&/false/&/Horizontal/&/0}{105/&/false/&/Horizontal/&/0}{102/&/false/&/Horizontal/&/0}{103/&/false/&/Horizontal/&/0}{1/&/false/&/Horizontal/&/0}{5/&/false/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{6/&/false/&/Horizontal/&/0}{2/&/true/&/Vertical/&/0}{3/&/true/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{205/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}
+quick_view_field_definitions={100000218/&/false/&/Horizontal/&/0}{218/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{101/&/false/&/Horizontal/&/0}{104/&/false/&/Horizontal/&/0}{105/&/false/&/Horizontal/&/0}{102/&/false/&/Horizontal/&/0}{103/&/false/&/Horizontal/&/0}{1/&/false/&/Horizontal/&/0}{5/&/false/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{6/&/false/&/Horizontal/&/0}{2/&/true/&/Vertical/&/0}{3/&/true/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{205/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}
 import_cd_container=
 card_view_settings_dialog_size=500/400
 file_import_directory_usage=0
@@ -41,10 +43,11 @@ Simple_Item_Form_Size=450/550
 online_search_retrieved_fields=2\#205\#4\#201\#1\#206\#3\#0\#
 online_search_form_size=700/600
 import_local_art_recurses=true
+mass_update_always_use_first=false
 import_local_art=true
 import_cd_dialog_size=550/400
 mass_update_server=
-web_field_definitions={218/&/100/&/0/&/false/&/false/&/false}{1/&/100/&/0/&/true/&/true/&/true}{205/&/100/&/0/&/false/&/false/&/false}{2/&/400/&/500/&/true/&/false/&/true}{5/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/false/&/false/&/false}{214/&/100/&/0/&/false/&/false/&/false}{6/&/100/&/0/&/false/&/false/&/false}{3/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/false/&/false/&/false}{4/&/100/&/0/&/true/&/false/&/false}{101/&/100/&/0/&/false/&/false/&/false}{104/&/100/&/0/&/false/&/false/&/false}{105/&/100/&/0/&/false/&/false/&/false}{102/&/100/&/0/&/false/&/false/&/false}{103/&/100/&/0/&/false/&/false/&/false}
+web_field_definitions={100000218/&/100/&/0/&/false/&/false/&/false}{218/&/100/&/0/&/false/&/false/&/false}{1/&/100/&/0/&/true/&/true/&/true}{205/&/100/&/0/&/false/&/false/&/false}{2/&/400/&/500/&/true/&/false/&/true}{5/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/false/&/false/&/false}{214/&/100/&/0/&/false/&/false/&/false}{6/&/100/&/0/&/false/&/false/&/false}{3/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/false/&/false/&/false}{4/&/100/&/0/&/true/&/false/&/false}{101/&/100/&/0/&/false/&/false/&/false}{104/&/100/&/0/&/false/&/false/&/false}{105/&/100/&/0/&/false/&/false/&/false}{102/&/100/&/0/&/false/&/false/&/false}{103/&/100/&/0/&/false/&/false/&/false}
 show_pictures_in_separate_tabs=true
 filter_dialog_size=700/400
 file_import_online_service=
