--- a/modules/super.properties
+++ b/modules/super.properties
@@ -1,9 +1,10 @@
 #
-#Mon Nov 15 15:41:33 CET 2010
+#Tue Apr 30 18:35:08 CEST 2013
 online_search_field_settings_dialog_size=600/450
 file_import_online_service_region=
 online_search_default_server=
 import_local_art_back_keywords=back
+file_import_recursive=false
 enabled=true
 import_local_art_media_keywords=cd,dvd,media
 card_view_picture_order=
@@ -11,8 +12,9 @@ online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 import_cd_storagemedium=
+export_fields=
 online_search_default_mode=
-field_definitions={213/&/null/&/true/&/false/&/false/&/false/&/null}{202/&/null/&/true/&/false/&/false/&/false/&/null}{205/&/null/&/true/&/false/&/false/&/false/&/null}{204/&/null/&/true/&/false/&/false/&/false/&/null}{216/&/null/&/true/&/false/&/false/&/false/&/null}{215/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/null/&/true/&/false/&/false/&/false/&/null}{203/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/null/&/true/&/false/&/false/&/false/&/null}{101/&/null/&/true/&/false/&/false/&/false/&/null}{104/&/null/&/true/&/false/&/false/&/false/&/null}{105/&/null/&/true/&/false/&/false/&/false/&/null}{102/&/null/&/true/&/false/&/false/&/false/&/null}{103/&/null/&/true/&/false/&/false/&/false/&/null}
+field_definitions={100000213/&/null/&/false/&/false/&/false/&/false/&/null}{221/&/null/&/true/&/false/&/false/&/false/&/null}{220/&/null/&/true/&/false/&/false/&/false/&/null}{219/&/null/&/true/&/false/&/false/&/false/&/null}{213/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{202/&/null/&/true/&/false/&/false/&/false/&/null}{205/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{204/&/null/&/true/&/false/&/false/&/false/&/null}{216/&/null/&/true/&/false/&/false/&/false/&/null}{215/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{201/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/null/&/true/&/false/&/false/&/false/&/null}{203/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{101/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{104/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{105/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{102/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{103/&/null/&/true/&/false/&/false/&/false/&/lblInformation}
 group_by=
 card_view_item_description=214\#
 table_column_order=201\#214\#
@@ -33,7 +35,7 @@ field_settings_dialog_size=500/300
 quick_view_settings_dialog_size=500/300
 file_import_use_online_service=true
 auto_add_perfect_match=false
-quick_view_field_definitions={213/&/false/&/Horizontal/&/0}{202/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{204/&/true/&/Horizontal/&/0}{216/&/true/&/Horizontal/&/0}{215/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{214/&/true/&/Horizontal/&/0}{203/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}
+quick_view_field_definitions={100000213/&/false/&/Horizontal/&/0}{221/&/true/&/Horizontal/&/0}{220/&/true/&/Horizontal/&/0}{219/&/true/&/Horizontal/&/0}{213/&/false/&/Horizontal/&/0}{202/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{204/&/true/&/Horizontal/&/0}{216/&/true/&/Horizontal/&/0}{215/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{214/&/true/&/Horizontal/&/0}{203/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}
 import_cd_container=
 card_view_settings_dialog_size=500/400
 file_import_directory_usage=0
@@ -41,10 +43,11 @@ Simple_Item_Form_Size=450/550
 online_search_retrieved_fields=0\#205\#102\#103\#204\#206\#101\#201\#203\#202\#104\#105\#216\#214\#215\#
 online_search_form_size=700/600
 import_local_art_recurses=true
+mass_update_always_use_first=false
 import_local_art=true
 import_cd_dialog_size=600/900
 mass_update_server=
-web_field_definitions={213/&/100/&/0/&/false/&/false/&/false}{202/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/false/&/false/&/false}{204/&/100/&/0/&/true/&/false/&/false}{216/&/100/&/0/&/true/&/false/&/false}{215/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{203/&/100/&/0/&/false/&/false/&/false}{206/&/100/&/0/&/false/&/false/&/false}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}
+web_field_definitions={100000213/&/100/&/0/&/false/&/false/&/false}{221/&/100/&/0/&/true/&/false/&/false}{220/&/100/&/0/&/true/&/false/&/false}{219/&/100/&/0/&/true/&/false/&/false}{213/&/100/&/0/&/false/&/false/&/false}{202/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/false/&/false/&/false}{204/&/100/&/0/&/true/&/false/&/false}{216/&/100/&/0/&/true/&/false/&/false}{215/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{203/&/100/&/0/&/false/&/false/&/false}{206/&/100/&/0/&/false/&/false/&/false}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}
 show_pictures_in_separate_tabs=true
 filter_dialog_size=700/400
 file_import_online_service=
