*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -230,7 +230,7 @@ lblDatabaseDriver=Database Driver
 tpProgramDefinitions=Definieer applicaties voor de diverse bestandstype
 sysBookpublisher_externalreferenceFieldItem=Item
 msgOutOfMemory=Er is onvoldoende geheugen beschikbaar om alle items te laden.
-sysSoftwareFieldCategories=License
+sysSoftwareFieldCategories=Categoriën
 sysImageFieldCategory=Categorie
 lblAdvanced=Advanced
 lblWebServer=Web Server
