*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+lblSubModule = selecteer module
 msgBackupFinished = De backup is met succes aangemaakt.
 msgBackupFinishedUnsuccessful = De backup is mislukt. 
 msgRestoreFileOverwriteIssue=Bestand %1 bestaat reeds. Het verwijderen van het bestaande bestand is mislukt.
