--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+msgCantBackupToRoot = Kan niet archiveren naar hoofd directories. Selecteer een sub directory.
 lblSubModule = selecteer module
 msgBackupFinished = De backup is met succes aangemaakt.
 msgBackupFinishedUnsuccessful = De backup is mislukt. 
