*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -244,7 +244,7 @@ lblMultiReferenceField = Reference Field, Multi-select
 lblSingleReferenceField = Reference Field, Dropdown
 lblDataCrowHelp = Data Crow Help
 lblDataCrowSettings = Data Crow Settings
-lblTotal = Total
+lblNumberOfRecords = Number of records
 lblDatabase = Database
 lblDatabaseDriver = Database Driver
 lblItems = Items
@@ -469,10 +469,9 @@ lblToggleToolbarLabelsAction = Toggle Toolbar Labels
 lblBrowserPath = The Default Web Browser
 lblNewOrUpdate = Transfer to new item tab
 lblCredits = Credits
-lblSystem = System information and tools
 lblMaintenance = Maintenance
 lblCompactAndShutdown = Compact database and shutdown
-lblExpertUser = Expert User
+lblDatabaseEditor = Database Editor
 lblDataCrowHelp = Data Crow Help
 lblRefresh = Refresh
 lblApplyFilter = Re-apply Filter
@@ -564,7 +563,7 @@ lblViewSettings = View Settings
 lblFileBrowser = File Browser
 lblFields = Fields
 lblXFields = %1 Fields
-lblStoredSQL = Prepared SQL statements
+lblStoredSQL = Saved SQL statements
 lblRun = Run
 lblQueryIn = Query input
 lblQueryOut = Query result
