--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -37,7 +37,7 @@ tpItemExportWizard = Allows you to export your items to a XML or text file. Thes
 tpFileRenamer = Rename and/or move the files on your system by using the item information. A preview with the pending changed is shown before actually renaming your files.
 tpStartProgram = Tries to open the file linked to the selected item. Note that you can configure file types to be opened with your favorite program from within the settings menu.
 tpFileImport = Can be used to create items based on files located on your file system. The file importer will extract information from each file and add this information to the new item. Imported items are added to the new item tab from where they can be saved. 
-tpExpertUser = The expert user tools allows you to set low-level database options. It also allows you to execute SQL statements on the database.
+tpDatabaseEditor = The database editor allows you to execute SQL statements directly on the database.
 tpFieldSettings = From here fields can be made hidden (or visible) and renamed. Additionally the properties of a field can be changed. A field can for example be set to required. 
 tpDonate = Make a donation to the development team (that would be me) of Data Crow.
 tpDriveManager = The Drive Manager is a powerful tool which can keep all of your file-based-items synchronized with your file system.
