--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -277,7 +277,7 @@ sysBookpublisher_externalreferenceItemPlural=Externe Referenties
 lblBrowserPath=Standaard web browser
 sysImage_storagemediumFieldLabel=Label
 lblProxyServerName=Proxy Server naam
-lblExpertUser=Expert
+lblDatabaseEditor=Database Bewerken
 sysSoftware_stateFieldItem=Item
 sysDeveloper_externalreferenceFieldexternalidtype=Type
 sysPersonFieldEmail=Email
@@ -612,7 +612,7 @@ sysUserFieldPhoneHome=Telefoonnummer (thuis)
 msgUpgradedModuleXAdded=Module %1 is bijgewerkt; Veld %2 is toegevoegd
 msgModuleImportError=Er is een fout opgetreden tijdens de import van de module(s): %1
 sysPersonItemPlural=Contactpersonen
-tpExpertUser=Met de expert tool kunt u de database instellingen wijzigen en SQL statements direct uitvoeren op de database.
+tpDatabaseEditor=Met de expert tool kunt u SQL statements direct uitvoeren op de database.
 lblFields=Velden
 sysMusictrackFieldArtists=Artiesten
 sysSoftware_platformFieldModified=Aangepast op
@@ -1182,7 +1182,7 @@ sysAudiocdFieldLoanStatus=Status
 sysSoftware_externalreferenceFieldModified=Aangepast op
 lblNeedMoreTime=Later..
 0x0020=Yamaha ADPCM
-lblTotal=Totaal
+lblNumberOfRecords = Aantal rijen
 sysPersonFieldCity=Stad
 0x0021=Speech Compression's Sonarc
 lblItemName=Item naam
@@ -1639,7 +1639,6 @@ sysBook_externalreference=Externe Referentie
 sysMovie_storagemediumItem=Opslagmedium
 0x0100=Rhetorex ADPCM
 0x0101=BeCubed Software's IRAT
-lblSystem=Systeem informatie en hulpmiddelen
 sysMediaFieldDueDate=Uiterste retourdatum
 msgFoundDiscID=Disc ID gevonden: %1
 msgHelpAterField=Het veranderen van het type van een veld kan resulteren in het verlies van gegevens. Maak altijd eerst een backup van de data!
@@ -2202,7 +2201,7 @@ lblUseDirAsAlbumName=Gebruik de directorie naam als de album naam
 sysAuthorFieldLabel=Label
 0x0260=Consistent CS2
 sysBookFieldserviceurl=Service URL
-lblStoredSQL=Prepared SQL statements
+lblStoredSQL=Bewaarde SQL statements
 tpFont=Verandert het lettertype
 sysBook_externalreferenceFieldItem=Item
 lblBold=Vetgedrukt
