*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,4 @@
+lblMatchAndMerge = Try and match imported items with existing (by name) and merge when duplicates have been found
 lblSubModule = select module
 lblOnlyOverdueLoans = Late returns only
 lblLoanReturned = Returned
