--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+lblMatchAndMerge = Controleer (op naam) of het geimporteerde item reeds bestaat in de database. Voeg samen indien gevonden.
 msgCantBackupToRoot = Kan niet archiveren naar hoofd directories. Selecteer een sub directory.
 lblSubModule = selecteer module
 msgBackupFinished = De backup is met succes aangemaakt.
