*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -265,8 +265,8 @@ lblIsEmpty = Is Empty
 lblIsFilled = Is Filled
 lblStartsWith = Starts with
 lblEndsWith = Ends With
-lblLessThen = Less Then
-lblGreaterThen = Greater Then
+lblLessThen = Less Than
+lblGreaterThen = Greater Than
 lblReadFileInfo = Read file information
 lblSelected = Selected
 lblAvailable = Available
