*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,5 @@
+msgDontAskAgainUserFolder = Do not ask me again (I can change this from within the Settings menu).
+msgChangeUserDir = The current user directory is %1. Do you want to continue using this folder? You can also change this location from within the Settings menu.
 msgCantBackupToRoot = The Backup process can't backup to Root folders. Please select a sub directory.
 msgRestoreFileOverwriteIssue = File %1 currently exists. The delete of the existing file failed.
 msgRetrievingItems = Retrieving items...
