--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -1,3 +1,4 @@
+tpUserDir = Here you can change the location of the user folder (where all data is stored).
 tpMassUpdateAlwaysUseFirst = Always uses the first result return. Quicker, but, there is no check on whether the result is a good match. Use with care! 
 tpFindReplace = Replace part of a text with another value
 tpAwsAccessKeyID = An AWS account can be requested for on the Amazon site: http://aws.amazon.com
