--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,7 @@
+msgDontAskAgainUserFolder = Vraag dit niet nogmaals (verander dit via het instellingen menu).
+msgChangeUserDir = De huidige gebruikers directorie is %1. Wilt u deze locatie blijven gebruiken? U kunt ook de locatie veranderen vanuit het instellingen menu.
+tpUserDir = Met deze toepassing kunt u de locatie van de gebruikers directorie (waar alle data wordt opgeslagen) veranderen.
+lblUserDir = Gebruikers directorie
 lblMatchAndMerge = Controleer (op naam) of het geimporteerde item reeds bestaat in de database. Voeg samen indien gevonden.
 msgCantBackupToRoot = Kan niet archiveren naar hoofd directories. Selecteer een sub directory.
 lblSubModule = selecteer module
