--- a/.classpath
+++ b/.classpath
@@ -76,5 +76,15 @@
 	<classpathentry kind="lib" path="lib/pdf/fontbox-1.8.2.jar"/>
 	<classpathentry kind="lib" path="lib/pdf/pdfbox-1.8.2.jar"/>
 	<classpathentry kind="lib" path="lib/jaudiotagger-2.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/tmdb/api-common-1.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/tmdb/commons-dbcp-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/tmdb/commons-pool-1.6.jar"/>
+	<classpathentry kind="lib" path="lib/tmdb/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/tmdb/jackson-annotations-2.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/tmdb/jackson-core-2.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/tmdb/jackson-databind-2.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/tmdb/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/tmdb/slf4j-jdk14-1.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/tmdb/themoviedbapi-3.7.jar"/>
 	<classpathentry kind="output" path="_build"/>
 </classpath>
