--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,7 @@
+tpICalendarLoanExport = Deze functie exporteert de uitleen administratie naar een iCalender bestand welke geimporteerd kan worden in de meeste agenda's. De export is gebaseerd op de uiterste retourdatum.
+lblICalendarLoanExport = ICalendar Uitleen Export
+lblExport = Exporteer
+lblFullExport = Exporteer de volledige uitleen informatie
 msgDontAskAgainUserFolder = Vraag dit niet nogmaals (verander dit via het instellingen menu).
 msgChangeUserDir = De huidige gebruikers directorie is %1. Wilt u deze locatie blijven gebruiken? U kunt ook de locatie veranderen vanuit het instellingen menu.
 tpUserDir = Met deze toepassing kunt u de locatie van de gebruikers directorie (waar alle data wordt opgeslagen) veranderen.
