--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,4 @@
+lblFullExport = Export the complete loan administration
 lblUserDir = User Folder Configuration
 lblMatchAndMerge = Try and match imported items with existing (by name) and merge when duplicates have been found
 lblSubModule = select module
@@ -71,6 +72,7 @@ lblServerSettings = Server Specific Settings
 lblRetrieveEditorialReviews = Retrieve editorial reviews
 lblRetrieveUserReviews = Retrieve user reviews
 lblHere=here
+lblExport = Export
 lblVersionCheck=Version Check
 lblCustomLabel=Custom Label
 lblExporter=Exporter
@@ -473,6 +475,7 @@ lblNewOrUpdate = Transfer to new item tab
 lblCredits = Credits
 lblMaintenance = Maintenance
 lblCompactAndShutdown = Compact database and shutdown
+lblICalendarLoanExport = ICalendar Loan Export
 lblDatabaseEditor = Database Editor
 lblDataCrowHelp = Data Crow Help
 lblRefresh = Refresh
