*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,9 @@
+msgStoringExportedLoansDB = De geexporteerde uilteen informatie wordt opgeslagen in de database
+msgStoringExportedLoansDBCompleted = Het opslaan van de geexporteerde gegevens is klaar
+msgCalendarSummary = Retourdatum voor "%1: %2", geleend door "%3"
+msgCalendarDescription = %1 "%2" is geleend door %3. De uitleen ging in op %4.
+msgCalendarAddedEvent = Kalender item %1 voor %1 toegevoegd
+msgCalendarExportComplete = De export is klaar
 tpICalendarLoanExport = Deze functie exporteert de uitleen administratie naar een iCalender bestand welke geimporteerd kan worden in de meeste agenda's. De export is gebaseerd op de uiterste retourdatum.
 lblICalendarLoanExport = ICalendar Uitleen Export
 lblExport = Exporteer
