--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,9 @@
+msgStoringExportedLoansDB = Storing exported loans in the database
+msgStoringExportedLoansDBCompleted = Completed storing exported loans in the database
+msgCalendarSummary = Due date for "%1: %2" lend by "%3"
+msgCalendarDescription = The %1 "%2" is lend by %3. The item was borrowed on %4.
+msgCalendarAddedEvent = Added event %1 for %2
+msgCalendarExportComplete = The export has been completed
 msgDontAskAgainUserFolder = Do not ask me again (I can change this from within the Settings menu).
 msgChangeUserDir = The current user directory is %1. Do you want to continue using this folder? You can also change this location from within the Settings menu.
 msgCantBackupToRoot = The Backup process can't backup to Root folders. Please select a sub directory.
