*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,5 @@
+lblFrom = van
+lblTo = tot
 msgStoringExportedLoansDB = De geexporteerde uilteen informatie wordt opgeslagen in de database
 msgStoringExportedLoansDBCompleted = Het opslaan van de geexporteerde gegevens is klaar
 msgCalendarSummary = Retourdatum voor "%1: %2", geleend door "%3"
