--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,5 @@
+lblFrom = from
+lblTo = to
 lblFullExport = Export the complete loan administration
 lblUserDir = User Folder Configuration
 lblMatchAndMerge = Try and match imported items with existing (by name) and merge when duplicates have been found
